--- a/index.html
+++ b/index.html
@@ -16,28 +16,77 @@
 <body>
 
 	<!-- Top Bar -->
-
+	<div class="top-bar">
+		<div class="container">
+			<div class="col-12 text-right">
+				<p><a href="tel:+18885555555">Call us at 1 (800) HTML - CSS</a></p>
+			</div>
+		</div>
+	</div>
 	<!-- End Top Bar -->
 
 
 	<!-- Navigation -->
-
+<nav class="navbar bg-light navbar-light navbar-expand-lg">
+	<div class="container">
+		<a href="index.html" class="navbar-brand"><img src="img/logo.png" 
+			alt="Logo" title="logo"></a>
+			<button class="navbar-toggler" type="button" data-toggle="collapse"
+			data-target="#navbarResponsive">
+				<span class="navbar-toggler-icon"></span> 
+				</title>
+			</button>
+			<div class="collapse navbar-collapse" id="navbarResponsive">
+				<ul class="navbar-nav ml-auto">
+					<li class="nav-item"><a href="index.html" class="nav-link 
+						active">Home</a></li>
+					<li class="nav-item"><a href="" class="nav-link">About</a></li>
+					<li class="nav-item"><a href="" class="nav-link">Services</a></li>
+					<li class="nav-item"><a href="" class="nav-link">Projects</a></li>
+					<li class="nav-item"><a href="" class="nav-link">Contact Us</a></li>
+				</ul>
+			</div>
+	</div>
+</nav>
 	<!-- End Navigation -->
 
 
 	<!-- Image Carousel -->
 
+<div id="carousel" class="carousel slide" data-ride="carousel" 
+data-interval="6500">
 
 		<!-- Carousel Content -->
-	
+	<div class="carousel-inner">
+
+		<div class="carousel-item active">
+			<img src="img/carousel/1.jpg" alt="" class="w-100">
+		</div>
+
+		<div class="carousel-item">
+			<img src="img/carousel/2.jpg" alt="" class="w-100">
+		</div>
+
+		<div class="carousel-item">
+			<img src="img/carousel/3.jpg" alt="" class="w-100">
+		</div>
+	</div>
 		<!-- End Carousel Content -->
 
 
 		<!-- Previous & Next Buttons -->
+		<a href="#carousel" class="carousel-control-prev" role="button" 
+		data-slide="prev">
+		<span class="fas fa-chevron-left fa-2x"></span>
+		</a>
 
+		<a href="#carousel" class="carousel-control-next" role="button" 
+		data-slide="next">
+		<span class="fas fa-chevron-right fa-2x"></span>
+		</a>
 		<!-- End Previous & Next Buttons -->
 
-
+	</div>
 	<!-- End Image Carousel -->
 
 
