--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
-   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>HTML5 Website with Bootstrap | Responsive Website Design</title>
 	<link rel="shortcut icon" href="img/favicon.ico">
 	<!-- Bootstrap 4.5 CSS -->
@@ -13,6 +14,7 @@
 	<!-- Google Fonts -->
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600,700&display=swap" rel="stylesheet">
 </head>
+
 <body>
 
 	<!-- Top Bar -->
@@ -27,13 +29,11 @@
 
 
 	<!-- Navigation -->
-<nav class="navbar bg-light navbar-light navbar-expand-lg">
-	<div class="container">
-		<a href="index.html" class="navbar-brand"><img src="img/logo.png" 
-			alt="Logo" title="logo"></a>
-			<button class="navbar-toggler" type="button" data-toggle="collapse"
-			data-target="#navbarResponsive">
-				<span class="navbar-toggler-icon"></span> 
+	<nav class="navbar bg-light navbar-light navbar-expand-lg">
+		<div class="container">
+			<a href="index.html" class="navbar-brand"><img src="img/logo.png" alt="Logo" title="logo"></a>
+			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
+				<span class="navbar-toggler-icon"></span>
 				</title>
 			</button>
 			<div class="collapse navbar-collapse" id="navbarResponsive">
@@ -46,104 +46,135 @@
 					<li class="nav-item"><a href="" class="nav-link">Contact Us</a></li>
 				</ul>
 			</div>
-	</div>
-</nav>
+		</div>
+	</nav>
 	<!-- End Navigation -->
 
 
 	<!-- Image Carousel -->
 
-<div id="carousel" class="carousel slide" data-ride="carousel" 
-data-interval="6500">
+	<div id="carousel" class="carousel slide" data-ride="carousel" data-interval="6500">
 
 		<!-- Carousel Content -->
-	<div class="carousel-inner">
+		<div class="carousel-inner">
 
-		<div class="carousel-item active">
-			<img src="img/carousel/1.jpg" alt="" class="w-100">
+			<div class="carousel-item active">
+				<img src="img/carousel/1.jpg" alt="" class="w-100">
+				<div class="carousel-caption">
+					<div class="container">
+						<div class="row justify-content-center">
+							<div class="col-8 bg-custom d-none d-lg-block py-3 px-0">
+								<h1>Bootstrap</h1>
+								<div class="border-top border-primary w-50 mx-auto my-3"></div>
+								<h3>Complete Website Design</h3>
+								<a href="#" class="btn btn-danger btn-lg mr-2">View Demo</a>
+								<a href="#" class="btn btn-primary btn-lg ml-2">Start Now</a>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+
+			<div class="carousel-item">
+				<img src="img/carousel/2.jpg" alt="" class="w-100">
+				<div class="carousel-caption">
+					<div class="container">
+						<div class="row justify-content-end text-right">
+							<div class="col-5 bg-custom d-none d-lg-block py-3 px-0 pr-3">
+								<p class="lead pb3">A MOBILE FRIENLY HTML & CSS WEBSITE DESIGN.</p>
+								<a href="#" class="btn btn-danger btn-lg">See Phone</a>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+
+			<div class="carousel-item">
+				<img src="img/carousel/3.jpg" alt="" class="w-100">
+				<div class="carousel-caption">
+					<div class="container">
+						<div class="row justify-content-start text-left">
+							<div class="col-8 bg-custom d-none d-lg-block py-3 px-0 pl-3">
+								<h3 class="pb-3">Built For Tablets</h3>
+								<p class="lead">THE BEST WEBSITES CAN BE SEEN JUST AS WELL ON ALL DEVICES.</p>
+								<a href="#" class="btn btn-primary btn-lg">Start Now</a>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<!-- End Carousel Content -->
+
+
+			<!-- Previous & Next Buttons -->
+			<a href="#carousel" class="carousel-control-prev" role="button" data-slide="prev">
+				<span class="fas fa-chevron-left fa-2x"></span>
+			</a>
+
+			<a href="#carousel" class="carousel-control-next" role="button" data-slide="next">
+				<span class="fas fa-chevron-right fa-2x"></span>
+			</a>
+			<!-- End Previous & Next Buttons -->
+
 		</div>
-
-		<div class="carousel-item">
-			<img src="img/carousel/2.jpg" alt="" class="w-100">
-		</div>
-
-		<div class="carousel-item">
-			<img src="img/carousel/3.jpg" alt="" class="w-100">
-		</div>
-	</div>
-		<!-- End Carousel Content -->
+		<!-- End Image Carousel -->
 
 
-		<!-- Previous & Next Buttons -->
-		<a href="#carousel" class="carousel-control-prev" role="button" 
-		data-slide="prev">
-		<span class="fas fa-chevron-left fa-2x"></span>
-		</a>
-
-		<a href="#carousel" class="carousel-control-next" role="button" 
-		data-slide="next">
-		<span class="fas fa-chevron-right fa-2x"></span>
-		</a>
-		<!-- End Previous & Next Buttons -->
-
-	</div>
-	<!-- End Image Carousel -->
+		<!-- Main Page Heading -->
 
 
-	<!-- Main Page Heading -->
+		<!-- Three Column Section -->
+
+		<!-- End Three Column Section -->
 
 
-	<!-- Three Column Section -->
-
-	<!-- End Three Column Section -->
+		<!-- Emoji Navbar First -->
 
 
-	<!-- Emoji Navbar First -->
+		<!-- Start Fixed Background IMG -->
+
+		<!-- End Fixed Background IMG -->
 
 
-	<!-- Start Fixed Background IMG -->
-
-	<!-- End Fixed Background IMG -->
- 
-	
-	<!-- Emoji Navbar Second -->
+		<!-- Emoji Navbar Second -->
 
 
-	<!-- Modal Popup -->
-
-		
-	<!-- Start Two Column Section -->
-
-	<!-- End Two Column Section -->
+		<!-- Modal Popup -->
 
 
-	<!-- Start Jumbotron -->
+		<!-- Start Two Column Section -->
 
-	<!-- End Jumbotron -->
-
-
-	<!-- Start Footer -->
-
-	<!-- End Footer -->
+		<!-- End Two Column Section -->
 
 
-	<!-- Start Socket -->
+		<!-- Start Jumbotron -->
 
-	<!-- End Socket -->
+		<!-- End Jumbotron -->
+
+
+		<!-- Start Footer -->
+
+		<!-- End Footer -->
+
+
+		<!-- Start Socket -->
+
+		<!-- End Socket -->
 
 
 
-	<!-- Script Source Files -->
+		<!-- Script Source Files -->
 
-	<!-- jQuery -->
-	<script src="js/jquery-3.5.1.min.js"></script>
-	<!-- Bootstrap 4.5 JS -->
-	<script src="js/bootstrap.min.js"></script>
-	<!-- Popper JS -->
-	<script src="js/popper.min.js"></script>
-	<!-- Font Awesome -->
-	<script src="js/all.min.js"></script>
+		<!-- jQuery -->
+		<script src="js/jquery-3.5.1.min.js"></script>
+		<!-- Bootstrap 4.5 JS -->
+		<script src="js/bootstrap.min.js"></script>
+		<!-- Popper JS -->
+		<script src="js/popper.min.js"></script>
+		<!-- Font Awesome -->
+		<script src="js/all.min.js"></script>
 
-	<!-- End Script Source Files -->
+		<!-- End Script Source Files -->
 </body>
+
 </html>
