--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	<div class="top-bar">
 		<div class="container">
 			<div class="col-12 text-right">
-				<p><a href="tel:+18885555555">Call us at 1 (800) HTML - CSS</a></p>
+				<p><a href="tel:+18885555555">Call us at 1 (800) WHITE-TIGER</a></p>
 			</div>
 		</div>
 	</div>
@@ -41,8 +41,8 @@
 					<li class="nav-item"><a href="index.html" class="nav-link 
 						active">Home</a></li>
 					<li class="nav-item"><a href="" class="nav-link">About</a></li>
-					<li class="nav-item"><a href="" class="nav-link">Services</a></li>
-					<li class="nav-item"><a href="" class="nav-link">Projects</a></li>
+					<li class="nav-item"><a href="" class="nav-link">Sponsor</a></li>
+					<li class="nav-item"><a href="" class="nav-link">Learn</a></li>
 					<li class="nav-item"><a href="" class="nav-link">Contact Us</a></li>
 				</ul>
 			</div>
@@ -63,12 +63,12 @@
 				<div class="carousel-caption">
 					<div class="container">
 						<div class="row justify-content-center">
-							<div class="col-8 bg-custom d-none d-lg-block py-3 px-0">
-								<h1>Bootstrap</h1>
+							<div class="col-8 bg-custom d-none d-md-block py-3 px-0">
+								<h1>White Tigers</h1>
 								<div class="border-top border-primary w-50 mx-auto my-3"></div>
-								<h3>Complete Website Design</h3>
-								<a href="#" class="btn btn-danger btn-lg mr-2">View Demo</a>
-								<a href="#" class="btn btn-primary btn-lg ml-2">Start Now</a>
+								<h3>The most beautiful creature in the world!</h3>
+								<a href="#" class="btn btn-danger btn-lg mr-2">White</a>
+								<a href="#" class="btn btn-primary btn-lg ml-2">Tiger</a>
 							</div>
 						</div>
 					</div>
@@ -81,8 +81,8 @@
 					<div class="container">
 						<div class="row justify-content-end text-right">
 							<div class="col-5 bg-custom d-none d-lg-block py-3 px-0 pr-3">
-								<p class="lead pb3">A MOBILE FRIENLY HTML & CSS WEBSITE DESIGN.</p>
-								<a href="#" class="btn btn-danger btn-lg">See Phone</a>
+								<p class="lead pb3">A TIGER LIKES TO YAWN.</p>
+								<a href="#" class="btn btn-danger btn-lg">See Here</a>
 							</div>
 						</div>
 					</div>
@@ -95,9 +95,9 @@
 					<div class="container">
 						<div class="row justify-content-start text-left">
 							<div class="col-8 bg-custom d-none d-lg-block py-3 px-0 pl-3">
-								<h3 class="pb-3">Built For Tablets</h3>
-								<p class="lead">THE BEST WEBSITES CAN BE SEEN JUST AS WELL ON ALL DEVICES.</p>
-								<a href="#" class="btn btn-primary btn-lg">Start Now</a>
+								<h3 class="pb-3">Look at how beautiful</h3>
+								<p class="lead">THE MOST BEAUTIFUL ANIMAL IN THE WHOLE WIDE WORLD.</p>
+								<a href="#" class="btn btn-primary btn-lg">Learn more</a>
 							</div>
 						</div>
 					</div>
@@ -121,18 +121,78 @@
 
 
 		<!-- Main Page Heading -->
+		<div class="col-12 text-center mt-5">
+			<h1 class="text-dark pt-4">Built for Tigers</h1>
+			<div class="border-top border-primary w-25 mx-auto my-3">
+				<p class="lead">For all of the Tiger Kings in the world.</p>
+			</div>
+		</div>
 
 
 		<!-- Three Column Section -->
+		<div class="container">
+			<div class="row my-5">
 
+				<div class="col-md-4 my-4">
+					<img src="img/1.jpg" alt="" class="w-100">
+					<h4 class="my-4">Amazingly Pretty.</h4>
+					<p>Look at how incredible this photo of this tiger looks.</p>
+					<a href="" class="btn btn-outline-dark btn-md">More photos</a>
+				</div>
+
+				<div class="col-md-4 my-4">
+					<img src="img/2.jpg" alt="" class="w-100">
+					<h4 class="my-4">Our Best Painting.</h4>
+					<p>Each year we hold painting contests for these beautiful tigers</p>
+					<a href="" class="btn btn-outline-dark btn-md">More Paintings</a>
+				</div>
+
+				<div class="col-md-4 my-4">
+					<img src="img/3.jpg" alt="" class="w-100">
+					<h4 class="my-4">Our Best Paintings and Photos</h4>
+					<p>We have contests for both paintings and photos.</p>
+					<a href="" class="btn btn-outline-dark btn-md">More images</a>
+				</div>
+			</div>
+		</div>
 		<!-- End Three Column Section -->
 
 
 		<!-- Emoji Navbar First -->
+		<a class="navbar bg-primary sticky-top emoji" href="#emoji" role="button" data-toggle="collapse"> <i
+				class="fas fa-plug"></i> </a>
 
+		<div class="collapse" id="emoji">
+			<div class="container">
+				<div class="row">
+					<div class="col-sm-6 col-md-3"><img src="img/emoji/panda.gif" alt="" class="w-100"></div>
+					<div class="col-sm-6 col-md-3"><img src="img/emoji/poo.gif" alt="" class="w-100"></div>
+					<div class="col-sm-6 col-md-3"><img src="img/emoji/unicorn.gif" alt="" class="w-100"></div>
+					<div class="col-sm-6 col-md-3"><img src="img/emoji/chicken.gif" alt="" class="w-100"></div>
+				</div>
+			</div>
+		</div> <!-- Modal Popup -->
+		<div class="modal fade" id="modal1">
+			<div class="modal-dialog"><img src="img/emoji/poo.gif" alt="" class="w-100"> </div>
+		</div>
 
 		<!-- Start Fixed Background IMG -->
-
+		<div class="fixed-background">
+			<div class="row text-light py-5">
+				<div class="col-12    text-center">
+					<h1>Smile Big!</h1>
+					<h3 class="py-4">This tiger likes to smile</h3>
+					<button type="button" data-toggle="modal" data-target="#modal1"
+						class="btn btn-primary btn-lg  mr-2">Smiling</button>
+					<button type="button" data-toggle="modal" data-target="#modal1"
+						class="btn btn-danger btn-lg ml-2">Tigers</button>
+				</div>
+			</div>
+			<div class="fixed-wrap">
+				<div class="fixed">
+				</div>
+			</div>
+		</div>
 		<!-- End Fixed Background IMG -->
 
 
@@ -140,28 +200,78 @@
 
 
 		<!-- Modal Popup -->
+		<div class="modal fade" id="modal1">
+			<div class="modal-dialog"><img src="img/emoji/poo.gif" alt="" class="w-100">
 
-
+			</div>
+		</div>
 		<!-- Start Two Column Section -->
-
+		<div class="container my-5">
+			<div class="row py-4">
+				<div class="col-lg-4 mb-4 my-lg-auto">
+					<h1 class="text-dark font-weight-bold mb-3">White Tigers are the Best
+					</h1>
+					<p class="md-4">At our core is a collection white tiger photos and paintings.</p>
+					<a href="https://w3newbie.com/themes/" target="_blank" class="btn btn-outline-dark btn-lg">The
+						Agency themes</a>
+				</div>
+				<div class="col-lg-8"><img src="img/code.jpg" alt="" class="w-100"></div>
+			</div>
+		</div>
 		<!-- End Two Column Section -->
 
 
 		<!-- Start Jumbotron -->
-
+		<div class="jumbotron py-5 mb-0">
+			<div class="container">
+				<div class="row">
+					<div class="col-md-7 col-lg-8 col-xl-9 my-auto">
+						<h4>Looking for high quality web development and design services?</h4>
+					</div>
+					<div class="col-md-5 col-lg-4 col-xl-3  pt-4    pt-md-0">
+						<a href="#" class="btn btn-pimary btn-lg">Contact Us Today</a>
+					</div>
+				</div>
+			</div>
+		</div>
 		<!-- End Jumbotron -->
 
 
 		<!-- Start Footer -->
+		<footer>
+			<div class="container">
+				<div class="row text-light text-center py-4 justify-content-center">
 
+					<div class="col-sm-10 col-md-8 col-lg-6">
+						<img src="img/logo-white.png" alt="">
+						<p>At our core is a collection of design and development solutions that represent everything
+							your business needs to compete in the modern marketplaces</p>
+
+						<ul class="social pt-3">
+							<li><a href="https://twitter.com/home" target="_blank"><i class="fab fa-twitter"></i></a>
+							</li>
+							<li><a href="https://www.instagram.com/" target="_blank"><i
+										class="fab fa-instagram"></i></a></li>
+							<li><a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook"></i></a>
+							</li>
+							<li><a href="https://www.youtube.com/" target="_blank"><i class="fab fa-youtube"></i></a>
+							</li>
+						</ul>
+
+					</div>
+				</div>
+			</div>
+		</footer>
 		<!-- End Footer -->
 
 
 		<!-- Start Socket -->
-
+		<div class="socket text-light text-center py-3">
+			<p>&#169; <a href="https://w3newbie.com/" target="_blank">w3newbie.com</a></p>
+		</div>
 		<!-- End Socket -->
 
-
+		<div class="cotainer my-5"></div>
 
 		<!-- Script Source Files -->
 
