--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
 					</h1>
 					<p class="md-4">At our core is a collection white tiger photos and paintings.</p>
 					<a href="https://w3newbie.com/themes/" target="_blank" class="btn btn-outline-dark btn-lg">The
-						Agency themes</a>
+						Sick Tigers</a>
 				</div>
 				<div class="col-lg-8"><img src="img/code.jpg" alt="" class="w-100"></div>
 			</div>
